Wrong Normal Dir with Arbitrary Obj Rot + Normal Transf. Orient. + Individual Origins + Only one vert selected. #37143

Closed
opened 2013-10-18 20:17:43 +02:00 by Nicolas Longchamps · 9 comments

%%%--- Operating System, Graphics card ---

renderer: 'GeForce GTX 560 Ti/PCIe/SSE2'

- Blender version with error, and version that worked ---

version 2.69 (sub 0), revision b'60761'. b'Release'
build date: b'2013-10-15', b'00:14:56'
platform: b'Windows:64bit'
binary path: 'C:\Blender\BlenderDEV\blender.exe'

- Short description of error ---

Got a wrong transform while modeling. Took me awhile to figure it out. Only happens with the following combination :

  • Object has a rotation transform on it (rotation is not zeroed)
    (While in Edit mode)
  • Transform orientation is in Normal mode
  • Pivot mode is set to Individual origins
  • Only one vertex is selected.

Pressing G+ZZ or grabbing the Z axis on the manipulator to move the vertex along it's normal direction will fail to move the vertex using it's correct (post transform worldspace) normal. It seems to use the pre transformed normal dir instead (as if the model was not rotated).

This only happens with a single vertex selected. Selecting a second vertex results in the correct direction (average of WS normals).
This problem does not occur with single edge or single face selections, i imagine because those elements are averaging multiple vertex normals.

Current workaround is applying rotation transform, though this is not always desirable.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1 - Open new scene and add a suzanne model.
2 - Press RR and apply an arbitrary rotation (rotation is not (0,0,0)) to suzanne. so that object space normals and world space normals should differ.
3 - Go into edit mode
4 - Set Pivot mode to Individual Origins
5 - Set Transform Orientation to Normal
6 - Select a single vertex
7 - Attempt to move along normal direction (G+ZZ or grab manipulator Z)

Although the manipulator is properly aligned, the vertex will not move along the vertice's world Z axis%%%

%%%--- Operating System, Graphics card --- renderer: 'GeForce GTX 560 Ti/PCIe/SSE2' - Blender version with error, and version that worked --- version 2.69 (sub 0), revision b'60761'. b'Release' build date: b'2013-10-15', b'00:14:56' platform: b'Windows:64bit' binary path: 'C:\\Blender\\BlenderDEV\\blender.exe' - Short description of error --- Got a wrong transform while modeling. Took me awhile to figure it out. Only happens with the following combination : - Object has a rotation transform on it (rotation is not zeroed) (While in Edit mode) - Transform orientation is in Normal mode - Pivot mode is set to Individual origins - Only one vertex is selected. Pressing G+ZZ or grabbing the Z axis on the manipulator to move the vertex along it's normal direction will fail to move the vertex using it's correct (post transform worldspace) normal. It seems to use the pre transformed normal dir instead (as if the model was not rotated). This only happens with a single vertex selected. Selecting a second vertex results in the correct direction (average of WS normals). This problem does not occur with single edge or single face selections, i imagine because those elements are averaging multiple vertex normals. Current workaround is applying rotation transform, though this is not always desirable. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1 - Open new scene and add a suzanne model. 2 - Press RR and apply an arbitrary rotation (rotation is not (0,0,0)) to suzanne. so that object space normals and world space normals should differ. 3 - Go into edit mode 4 - Set Pivot mode to Individual Origins 5 - Set Transform Orientation to Normal 6 - Select a single vertex 7 - Attempt to move along normal direction (G+ZZ or grab manipulator Z) Although the manipulator is properly aligned, the vertex will not move along the vertice's world Z axis%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%upon further investigation, it seems "individual origins" pivot mode + normal dir is not functioning properly at all in 2.69.2
Multiple element selections result in averaged normal direction movement, not along individual origins.

I've verified the same actions in BL 2.68 release, and the behavior is functioning properly there.%%%

%%%upon further investigation, it seems "individual origins" pivot mode + normal dir is not functioning properly at all in 2.69.2 Multiple element selections result in averaged normal direction movement, not along individual origins. I've verified the same actions in BL 2.68 release, and the behavior is functioning properly there.%%%
Member

%%%Confirmed, this doesn't look right.
@Campbell: Can you check this? I think you've worked in this area recently. Attached a simple test file, just do g+zz on the selected vertex.%%%

%%%Confirmed, this doesn't look right. @Campbell: Can you check this? I think you've worked in this area recently. Attached a simple test file, just do g+zz on the selected vertex.%%%

This issue was referenced by blender/blender-addons-contrib@47a8b38e53

This issue was referenced by blender/blender-addons-contrib@47a8b38e5356356b19a51723a4efcc173063dad5

This issue was referenced by 47a8b38e53

This issue was referenced by 47a8b38e5356356b19a51723a4efcc173063dad5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 47a8b38e53.

Closed by commit 47a8b38e53.

Cool! Thanks :)

Cool! Thanks :)

Just tried daily build 2013-12-03 05:14 hash ab49437
would the fix be present in this build?

Although what made me originally submit this bug seems fixed, the overall functionality still seems flawed (as mentionned in subsequent comment)

Moving multiple vertices along their individual origins worked great in BL 2.68a release. Now they seem to move in averaged groups depending on whether or not they are connected (share a loop?). Is this by design? Was this changed to help moving faces using individual origins?

If so, could this method be employed when in face mode, but keep the 2.68a behavior when in vertex mode?

thanks

Just tried daily build 2013-12-03 05:14 hash ab49437 would the fix be present in this build? Although what made me originally submit this bug seems fixed, the overall functionality still seems flawed (as mentionned in subsequent comment) Moving multiple vertices along their individual origins worked great in BL 2.68a release. Now they seem to move in averaged groups depending on whether or not they are connected (share a loop?). Is this by design? Was this changed to help moving faces using individual origins? If so, could this method be employed when in face mode, but keep the 2.68a behavior when in vertex mode? thanks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37143
No description provided.