Fix T37143: Wrong normal dir with individual origins + one vert selected